--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,9 @@
 
-/* 
+#jumbotronCard {
+    border: none;
+    background-color: rgb(230, 230, 230);
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
-
-*/
+#cardText {
+    font-size: smaller;
+}
